--- a/aweekcalendarlib/src/main/res/values/colors.xml
+++ b/aweekcalendarlib/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#7D61D9</color>
+    <color name="primary">#A227E3</color>
     <color name="primary_dark">#483194</color>
     <color name="primary_light">#FFCDD2</color>
     <color name="accent">#e42933</color>
