--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,9 @@
         android:id="@+id/aweek"
         android:layout_height="wrap_content"
         android:gravity="top"
-        android:text="Hello World!" />
+        android:text="Hello World!"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
     
     <FrameLayout
         android:id="@+id/cont"
