--- a/aweekcalendarlib/src/main/res/layout/view_calender.xml
+++ b/aweekcalendarlib/src/main/res/layout/view_calender.xml
@@ -31,7 +31,7 @@
                 android:layout_height="@dimen/my_calendar_button_size"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_back" />
+                android:src="@drawable/ic_arrow_left" />
         </RelativeLayout>
 
         <TextView
@@ -56,7 +56,7 @@
                 android:layout_height="@dimen/my_calendar_button_size"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_back" />
+                android:src="@drawable/ic_arrow_left" />
         </RelativeLayout>
 
     </RelativeLayout>
@@ -73,7 +73,7 @@
         <ImageView
             android:layout_width="@dimen/my_calendar_button_size"
             android:layout_height="@dimen/my_calendar_button_size"
-            android:src="@drawable/ic_back" />
+            android:src="@drawable/ic_arrow_left" />
     </RelativeLayout>
 
 
@@ -87,7 +87,7 @@
         <ImageView
             android:layout_width="@dimen/my_calendar_button_size"
             android:layout_height="@dimen/my_calendar_button_size"
-            android:src="@drawable/ic_forward" />
+            android:src="@drawable/ic_arrow_right" />
     </RelativeLayout>
 
     <ViewFlipper
