--- a/aweekcalendarlib/src/main/res/layout/view_calender.xml
+++ b/aweekcalendarlib/src/main/res/layout/view_calender.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,7 +32,7 @@
                 android:layout_height="@dimen/my_calendar_button_size"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_arrow_left" />
+                app:srcCompat="@drawable/ic_arrow_left" />
         </RelativeLayout>
 
         <TextView
@@ -73,7 +74,7 @@
         <ImageView
             android:layout_width="@dimen/my_calendar_button_size"
             android:layout_height="@dimen/my_calendar_button_size"
-            android:src="@drawable/ic_arrow_left" />
+            app:srcCompat="@drawable/ic_arrow_left" />
     </RelativeLayout>
 
 
@@ -87,7 +88,7 @@
         <ImageView
             android:layout_width="@dimen/my_calendar_button_size"
             android:layout_height="@dimen/my_calendar_button_size"
-            android:src="@drawable/ic_arrow_right" />
+            app:srcCompat="@drawable/ic_arrow_right" />
     </RelativeLayout>
 
     <ViewFlipper
