--- a/aweekcalendarlib/src/main/res/layout/view_calender.xml
+++ b/aweekcalendarlib/src/main/res/layout/view_calender.xml
@@ -72,6 +72,7 @@
         android:gravity="center_vertical">
 
         <ImageView
+            android:layout_marginLeft="16dp"
             android:layout_width="@dimen/my_calendar_button_size"
             android:layout_height="@dimen/my_calendar_button_size"
             app:srcCompat="@drawable/ic_left_arrow" />
@@ -88,6 +89,7 @@
         <ImageView
             android:layout_width="@dimen/my_calendar_button_size"
             android:layout_height="@dimen/my_calendar_button_size"
+            android:layout_marginRight="16dp"
             android:src="@drawable/ic_right_arrow" />
     </RelativeLayout>
 
