--- a/aweekcalendarlib/src/main/res/drawable/ic_right_arrow.xml
+++ b/aweekcalendarlib/src/main/res/drawable/ic_right_arrow.xml
@@ -1,4 +1,10 @@
-<vector android:height="24dp" android:viewportHeight="17"
-    android:viewportWidth="17" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#303C42" android:fillType="nonZero" android:pathData="M4.96,1.707A1,1 0,0 1,6.374 0.293l7.333,7.333a1,1 0,0 1,0 1.414l-7.333,7.334A1,1 0,1 1,4.96 14.96l6.626,-6.627L4.96,1.707z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="17"
+    android:viewportHeight="17">
+    <path
+        android:fillColor="@color/accent"
+        android:fillType="nonZero"
+        android:pathData="M4.96,1.707A1,1 0,0 1,6.374 0.293l7.333,7.333a1,1 0,0 1,0 1.414l-7.333,7.334A1,1 0,1 1,4.96 14.96l6.626,-6.627L4.96,1.707z" />
 </vector>
