--- a/aweekcalendarlib/src/main/res/layout/view_calender.xml
+++ b/aweekcalendarlib/src/main/res/layout/view_calender.xml
@@ -32,7 +32,7 @@
                 android:layout_height="@dimen/my_calendar_button_size"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                app:srcCompat="@drawable/ic_left_arrow" />
+                app:srcCompat="@drawable/ic_left_arrow_lib" />
         </RelativeLayout>
 
         <TextView
@@ -57,7 +57,7 @@
                 android:layout_height="@dimen/my_calendar_button_size"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                app:srcCompat="@drawable/ic_left_arrow" />
+                app:srcCompat="@drawable/ic_left_arrow_lib" />
         </RelativeLayout>
 
     </RelativeLayout>
@@ -75,7 +75,7 @@
             android:layout_marginLeft="8dp"
             android:layout_width="@dimen/my_calendar_button_size"
             android:layout_height="@dimen/my_calendar_button_size"
-            app:srcCompat="@drawable/ic_left_arrow" />
+            app:srcCompat="@drawable/ic_left_arrow_lib" />
     </RelativeLayout>
 
 
@@ -90,7 +90,7 @@
             android:layout_width="@dimen/my_calendar_button_size"
             android:layout_height="@dimen/my_calendar_button_size"
             android:layout_marginRight="8dp"
-            android:src="@drawable/ic_right_arrow" />
+            android:src="@drawable/ic_right_arrow_lib" />
     </RelativeLayout>
 
     <ViewFlipper
